# FITB_AI

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
chrome-extention/: manifest.json
chrome-extention/autofill/: sites.js
chrome-extention/autofill/parsers/: lever.js
chrome-extention/autofill/sites/: base.js
chrome-extention/background/: background.js
chrome-extention/content/: content.js  content_main.js
chrome-extention/icons/: generate_icons.html
chrome-extention/popup/: popup.html  popup.js  popup_main.js
docker/: dev.sh  docker-compose.example.yml  setup.sh  start.sh
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  profile-client.tsx  providers.tsx
frontend/src/theme/: theme.ts
src/: env_utils.py
src/backend/: asgi.py  settings.py  urls.py
src/profiles/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
src/profiles/api/: serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_customuser_username_alter_customuser_auth0_id_and_more.py  0002_remove_equalemploymentdata_ethnicity_and_more.py  0002_remove_resume_s3_key_alter_resume_is_default_and_more.py  0002_resume_file_alter_resume_s3_key.py  0003_alter_equalemploymentdata_authorized_canada_and_more.py  0003_resume_s3_key.py  0004_remove_resume_s3_key.py  0005_resume_s3_key.py  0006_userprofile_email_tokenlog.py
src/profiles/models/: __init__.py  auth.py  custom_user.py  education.py  equal_employment.py  resume.py  skill.py  social_link.py  (+2 more)
src/templates/: base.html
(+54 files in other folders)
